cot-macros/tests/ui/derive_into_response_struct.rs
use cot::response::IntoResponse;

#[derive(IntoResponse)]
struct NotEnum;

fn main() {}
